# HippoPlayer

./: .ccls  .clang-format  .gitignore  .travis.yml  CHANGELOG.md  README.md  appveyor.yml  default_playlist.hpl  layout.data  old.hpl  playlist.json  tundra.lua  units.bgfx.lua  units.hippoplayer.lua  units.plugins.lua  units.uade_plugin.lua
.github/workflows/: main.yml  publish_release.yml
data/: formats_description.md
data/config/: global.cfg
data/mac/: hippo.icns  info.plist
data/windows/: hippo.rc  hippo.res
old_src/: tundra.lua  units.lua
old_src/hippoplayer/audio/: HippoAudio.c
old_src/hippoplayer/core/: HippoLua.c  Types.h
old_src/hippoplayer/core/io/: HippoIo.m
old_src/hippoplayer/graphics/: HippoImageLoader.c  HippoWindow.h
old_src/hippoplayer/graphics/gui/: HippoFileDialog.m  HippoFont.h  MicroknightFont.c
old_src/hippoplayer/main/: HippoPlugins.c  HippoPlugins.h  main.c
old_src/hippoplayer/plugin_api/: HippoPlugin.h
old_src/plugins/ahx/: AhxPlugin.cpp
old_src/plugins/hively/: HivelyPlugin.c
old_src/plugins/packers/unlzx/: unlzx.c
old_src/plugins/sid/: SidPlugin.cpp
scripts/: gen_rust_core_ffi.sh  linux_build_debug.sh  linux_generate_messages.sh  mac_build_asan_debug.sh  mac_build_debug.sh  mac_build_release.sh  mac_debug_with_gen.sh  mac_gen_rust_plugin_ffi.bash  mac_release_deploy.sh  travis_ci_linux_build.sh  travis_ci_mac.sh  vcvarsamd64_x86.bat  vcvarsx86_amd64.bat  win32_generate_messages.cmd  win64_build_debug.cmd  win64_build_release.cmd  win64_copy_bins.cmd  win64_gen_vs_solution.cmd  win64_release_deploy.cmd  wrui_gen_ffi.sh
src/: tundra.lua  units.lua
src/hippo_bindgen/: Cargo.toml
src/hippo_bindgen/src/: main.rs
src/hippo_core/: Cargo.toml  decoder_plugins.rs
src/hippo_core/config/: Cargo.toml
src/hippo_core/config/src/: lib.rs
src/hippo_core/config_test/: Cargo.toml
src/hippo_core/config_test/src/: main.rs
src/hippo_core/core/: Cargo.toml  build.rs
src/hippo_core/core/src/: audio.rs  core_config.rs  ffi.rs  ffi_gen.rs  lib.rs  playback_settings.rs  playlist.rs  plugin_handler.rs  service.rs  service_ffi.rs  song_db.rs
src/hippo_core/ffi/: Cargo.toml  build.rs
src/hippo_core/ffi/src/: ffi.rs  lib.rs
src/hippo_core/logger/: Cargo.toml  build.rs
src/hippo_core/logger/src/: lib.rs  log.cpp  log.h
src/hippo_core/messages/: Cargo.toml
src/hippo_core/messages/src/: HippoMessages_generated.rs  decode.rs  lib.rs
src/hippo_core/miniaudio/: Cargo.toml  bindings.rs  build.rs
src/hippo_core/miniaudio/script/: bindgen.sh
src/hippo_core/miniaudio/src/: bindings.rs  error.rs  lib.rs  sys.rs
src/hippo_core/miniaudio/src/c_api/: miniaudio.c  miniaudio.h
src/hippo_core/miniaudio/src/c_api/extras/miniaudio_split/: miniaudio.h
src/hippo_core/native/: hippo_core.h
src/hippo_core/scfg/: Cargo.toml
src/hippo_core/song_db/: Cargo.toml
src/hippo_core/song_db/benches/: benchmark.rs
src/hippo_core/song_db/src/: lib.rs
src/hippo_core/src/: audio.rs  decoder_plugins.rs  lib.rs  playlist.rs  plugin_handler.rs  service.rs  service_ffi.rs  song_db.rs
src/hippo_core/xxh3/: Cargo.toml  build.rs
src/hippo_core/xxh3/src/: lib.rs  xxh3.c
src/hippo_core_loader/: hippo_core_loader.c  hippo_core_loader.h
src/hippo_player/: Cargo.toml  DevicePanel.cpp  DevicePanel.h  DevicePanel.ui  MainWindow.cpp  MainWindow.h  PlaybackPluginPriority.cpp  PlaybackPluginPriority.h  PlaybackPluginPriority.ui  PlaylistModel.cpp  PlaylistModel.h  PrefsDialog.cpp  PrefsDialog.h  PrefsDialog.ui  console.cpp  console.h  console.ui  device_panel.cpp  hippo_main.cpp  main_window.cpp  playback_plugin_panel.cpp  playback_plugin_panel.h  playback_plugin_panel.ui  playback_plugin_priority.cpp  playback_plugin_priority.h  playlist_model.cpp  prefs_dialog.cpp  prefs_dialog.h  prefs_dialog.ui  qt_plugin_loader.h
src/hippo_player/src/: audio.rs  main.rs  playerview.rs  playlist.rs  playlist_view.rs  plugin_handler.rs  service.rs  service_ffi.rs  song_db.rs  song_info.rs  view_plugins.rs
src/hippo_player_old/: build.rs
src/hippo_player_old/src/: main.rs  playlist.rs  plugin_handler.rs  service_ffi.rs
src/hippo_player_terminal/: Cargo.toml
src/hippo_player_terminal/src/: main.rs  song_window.rs
src/hippo_player_test_main/: hippo_main.cpp
src/hippo_vis/: hippo_vis.cpp  vis_main_window.cpp  vis_main_window.h  vis_playlist.cpp  vis_playlist.h
src/hippo_vis/imgui/: imgui.cpp  imgui_impl_glfw.cpp
src/hippo_vis/imgui_bgfx/: bgfx_utils.cpp  common.h  imgui.cpp  imgui.h  vs_ocornut_imgui.bin.h
src/hippodata/: info.plist
src/hippoplayer/: main.c
src/hippoplayer/audio/: HippoAudio.h
src/hippoplayer/core/: HippoLua.c  HippoLua.h
src/hippoplayer/graphics/: HippoImageLoader.h  HippoOSXWindowFrameView.h  HippoOSXWindowFrameView.m  HippoWindow.h  HippoWindow.m
src/hippoplayer/main/: HippoPlugins.c  HippoPlugins.h  main.c
src/hippoplayer/player/: main.c
src/hippoplayer/plugin_api/: HippoPlugin.h
src/plugin_api/: HippoMessages.fbs  HippoMessages.h  HippoMessages_generated.h  HippoPlugin.h  HippoPluginView.h  HippoQtView.h  HippoSettings.h  messages.md
src/plugins/ahx/: licence.txt
src/plugins/dummy/: dummy.c
src/plugins/flac/: FlacPlugin.c
src/plugins/futurecomposer/: FutureComposerPlugin.c
src/plugins/hively/: HivelyPlugin.c
src/plugins/mdx/: mdx_plugin.c
src/plugins/mikmod/: MikmodPlugin.c
src/plugins/openmpt/: openmpt.cpp
src/plugins/playback/sc68/libsc68/io68/: Makefile.am  io68.c  mfp_io.h  mfpemul.c  mwemul.c  mwemul.h  paula_io.c  paula_io.h  paulaemul.c  paulaemul.h  shifter_io.c  ym_blep.c  ym_dump.c  ym_envel.c  ym_io.h  ymemul.h
src/plugins/sid/: SidPlugin.c  SidPlugin.cpp
src/plugins/tfmx/: TfmxPlugin.c
src/plugins/uade/: uade_plugin.cpp
src/plugins/vgm/: vgm_plugin.c  vgm_plugin.cpp
src/wrui/: README.md  units.wrui.lua
src/wrui/include/: dock_widget.h  wrui.h
src/wrui_rust/: Cargo.toml  LICENSE  README.md  build.rs
src/wrui_rust/src/: ffi.rs  lib.rs  main.rs
(+646 files in other folders)
