[package]
name = "hippo_player"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
build = "build.rs"

[dependencies]
wrui = { path = "../external/wrui_rust" }
hippo_api = { path = "../plugin_api/rust/hippo_api" }
rodio = "0.5.2"
dynamic_reload = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
walkdir = "2"
rmp-rpc = "0.2.0"
rmp = "0.8.7"

