[package]
name = "config_test"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-lexpr = "0.1.0"
serde_derive = "1.0.89"
serde = "1.0.89"

config = { path = "../config" }
