[package]
name = "hippo_core"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
messages = { path = "../messages" }
rodio = "0.9.0"
dynamic_reload = "0.4.0"
walkdir = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
