[package]
name = "hippo_core"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
rand = "0.7"
anyhow = "1.0"
config = { path = "../config" }
song_db = { path = "../song_db" }
dynamic_reload = "0.4.0"
messages = { path = "../messages" }
ringbuf = "0.2"
rodio = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
walkdir = "2"
