[package]
name = "hippo_core"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0"
config = { path = "../config" }
dirs = "3.0.1"
dynamic_reload = "0.4.0"
logger = { path = "../logger" }
messages = { path = "../messages" }
miniaudio = { path = "../miniaudio" }
rand = "0.7"
ringbuf = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
song_db = { path = "../song_db" }
walkdir = "2"

