[package]
name = "miniaudio"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cc = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { path = "../logger" }

