[package]
name = "song_db"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.25"
xxh3 = { path = "../xxh3" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
